2007-10-06  chl  <chl@tuxfamily.org>

	- make it build when futimes and getdirentries are not available.
	(Thanks to Natanael Copa for the initial report and help)
	Now it build on Alpine Linux, which is a Gentoo uclibc distro.

2007-10-04  chl  <chl@tuxfamily.org>

	- add openbsd-compat and regress directories to follow Damien
	Miller advise
	- make it build on amd64

2007-10-02  chl  <chl@tuxfamily.org>

	- first announcement to OpenCVS developers